app/sampson/sampson.scss
.about-sampson{
	/*text-align: center;*/
	margin-bottom: 2%;

	.sampson-header {
		height: 450px;
		background-size: cover;
		background-repeat: no-repeat;
		background-position: center;

		.section-header {
			color: #ffffff;
			font-size: .3em;
			text-align: center;
			margin: 1em 0;
		}
		.sampson-header-text {
			color: #ffffff;
			font-family: $header-font;
			font-size: .2em;
		}
	}
	.phase1 {
		margin-bottom: 1em;
		display: flex;
		text-align: center;
		.section-header{
			color: $light-gray;
		}
		.phase-reno {
			display: flex;
		    flex-direction: column;
		    justify-content: center;
			padding: 1em 0;
			.phase1-desc{
				text-align: left;
			}
		}
		.phase-arrow {
			background-color: $logo-green;
			fill: #ffffff;
			padding: 0;
			display: flex;
			flex-direction: column;
			justify-content: center;
		}
		.goal {
			background-color: $logo-green;
			display: flex;
			flex-direction: column;
			justify-content: center;
			color: #ffffff;
			font-size: 2em;
			font-family: sans-serif;
			padding: 1em 0;
		}
	}
	.step1 {
		margin-bottom: 1em;
		.section-header {
			color: $light-gray;
			border-bottom: 2px solid $logo-green;
		}
		.step1-desc {
			padding: 0 3em;
		}
	}
	.carousel-control.left, .carousel-control.right {
		background-color: unset;
		background-image: none;
		color: black;
	}
	.inside-sampson {
		margin-bottom: 1em;
		text-align: center;
		.carousel-indicators {
			li {
				background-color: gray;
			}
			.active {
				background-color: $logo-green;
			}
		}
		img {
		    display: block;
		    margin: 0 auto;
		    border: 5px solid black;
		    margin-bottom: 3.5em;
		}
	}
	.bero {
		background-color: $logo-green;
		color: #ffffff;
		text-align: center;
	}
}

